...
                NavigationLink(destination: SliderView()) {
                    Text("Slider")
                        .accessibilityIdentifier("slider")
                }
                NavigationLink(destination: StepperView()) {
                    Text("Stepper View")
                        .accessibilityIdentifier("stepper")
                }
                NavigationLink(destination: SegmentView()) {
                    Text("Segment View")
                        .accessibilityIdentifier("segmentView")
                }
                NavigationLink(destination: SegmentView()) {
...
